# p04_arob_lab3_drones

./: CMakeLists.txt  INSTALL.txt  README.md  README.txt  package.xml
cfg/: arob_lab3.rviz
data/: gates_harder.txt
include/lab3_drones/: drawing.hpp  drone_race.hpp  drones_utils.hpp
launch/: basic.launch
src/: drawing.cpp  drone_race.cpp  drones_utils.cpp
